--- a/assets/src/app/home/templates/feed.tpl.html
+++ b/assets/src/app/home/templates/feed.tpl.html
@@ -34,21 +34,36 @@
             </div>
             <div class="spacing-5"></div>
 
+
+
+
             <md-card ng-repeat="post in posts">
-                <md-card-title>
-                    <md-card-title-text>
-                    <a href="/member/{{post.user.username}}">
-                    <img style="max-width:64px" ng-src="{{post.user.avatarUrl}}" class="md-card-image" alt="{{post.user.username}}">
-                    <h3>{{post.user.username}}</h3>
-                    </a>
-                    <p>{{post.post}}</p>
-                    </md-card-title-text>
-                </md-card-title>
-                <md-card-title>
-                    <a>like</a> 
-                    <a>reply</a>
-                </md-card-title>
+                <div style="padding:24px 16px 16px">
+                    <div style="padding:24px 16px 16px">
+                        <a href="/member/{{post.user.username}}">
+                            <img style="max-width:64px" ng-src="{{post.user.avatarUrl}}" class="md-card-image" alt="{{post.user.username}}">
+                            <h3>{{post.user.username}}</h3>
+                        </a>
+                        <p>{{post.post}}</p>
+                    </div>
+                </div>
+                <div style="padding:24px 16px 16px">
+                    <div style="padding:24px 16px 16px">
+                        <a href="#" ng-click="" class="pull-left"><i class="fa fa-thumbs-up"></i></a> 
+                        <a href="post/{{post.id}}" class="pull-right"><i class="fa fa-link"></i></a>
+                        <div class="profilePost">
+                            <form role="form">
+                                <md-input-container class="md-block">
+                                    <textarea ng-model="newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder=""></textarea>
+                                </md-input-container>
+                            </form>
+                        </div>
+                    </div>
+                </div>
             </md-card>
+
+
+
 
             <div class="spacing-15"></div>
             <h3>trending votes</h3>
