--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -91,6 +91,7 @@
         <script src="/src/app/login/index.js"></script>
         <script src="/src/app/member/index.js"></script>
         <script src="/src/app/nav/index.js"></script>
+        <script src="/src/app/post/index.js"></script>
         <script src="/src/app/register/index.js"></script>
         <script src="/src/app/search/index.js"></script>
         <script src="/src/app/vote/index.js"></script>
