--- a/.tmp/public/src/app/search/index.tpl.html
+++ b/.tmp/public/src/app/search/index.tpl.html
@@ -40,7 +40,7 @@
 					</md-card>
 			        <br><br>
 			        <div ng-click="loadMoreVotes()" style="text-align:center">
-			        	<button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-caret-down"></i></button>
+			        	<button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-angle-down"></i></button>
 			        </div>
     			</uib-tab>
 				<uib-tab heading="Results" ng-show="searchResults">
@@ -67,7 +67,7 @@
 			            </md-card-title>
 			        </md-card>
 			        <div ng-click="loadMoreBills()" style="text-align:center">
-			        	<button class="btn btn-default col-xs-10 col-xs-offset-1">MORE</button>
+			        	<button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-angle-down"></i></button>
 			        </div>
     			</uib-tab>
 				<uib-tab heading="Committees">
@@ -79,7 +79,7 @@
 						</md-card-title>
 					</md-card>
 					<div ng-click="loadMoreCommittees()" style="text-align:center">
-						<button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-caret-down"></i></button>
+						<button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-angle-down"></i></button>
 					</div>
     			</uib-tab>
 				<uib-tab heading="{{userCount}} Members">
@@ -145,7 +145,7 @@
 					</md-card>
 			        <br><br>
 			        <div ng-click="loadMoreVotes()" style="text-align:center">
-			        	<button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-caret-down"></i></button>
+			        	<button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-angle-down"></i></button>
 			        </div>
     			</uib-tab>
 			</uib-tabset>
