--- a/assets/src/app/committees/index.tpl.html
+++ b/assets/src/app/committees/index.tpl.html
@@ -40,7 +40,7 @@
 <md-divider></md-divider>
 <div class="spacing-10"></div>
 <div ng-click="loadMore()" style="text-align:center">
-    <button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-caret-down"></i></button>
+    <button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-angle-down"></i></button>
 </div>
 <div class="spacing-50"></div>
 <div ng-include="'footer/index.tpl.html'"></div>
