--- a/assets/src/app/home/templates/feed.tpl.html
+++ b/assets/src/app/home/templates/feed.tpl.html
@@ -1,4 +1,4 @@
-<div class="spacing-25"></div>
+<div class="spacing-15"></div>
 <div class="container">
     <div class="row">
         <div class="col-md-4">
@@ -34,23 +34,37 @@
             </div>
             <div class="spacing-5"></div>
 
-
-
-
             <md-card ng-repeat="post in posts">
-                <div style="padding:24px 16px 16px">
-                    <div style="padding:24px 16px 16px">
-                        <a href="/member/{{post.user.username}}">
-                            <img style="max-width:64px" ng-src="{{post.user.avatarUrl}}" class="md-card-image" alt="{{post.user.username}}">
-                            <h3>{{post.user.username}}</h3>
-                        </a>
-                        <p>{{post.post}}</p>
-                    </div>
-                </div>
-                <div style="padding:24px 16px 16px">
-                    <div style="padding:24px 16px 16px">
-                        <a href="#" ng-click="" class="pull-left"><i class="fa fa-thumbs-up"></i></a> 
-                        <a href="post/{{post.id}}" class="pull-right"><i class="fa fa-link"></i></a>
+                <div style="padding:16px 16px 16px">
+
+
+                        <div>
+                            <a href="/member/{{post.user.username}}">
+                                <img class="post-img" ng-src="{{post.user.avatarUrl}}" class="md-card-image" alt="{{post.user.username}}">
+                                <h4 class="post-name">{{post.user.username}}</h4>
+                            </a>
+                            <div class="pull-right">
+                                <span class="grey" am-time-ago="post.updatedAt"></span>
+                                <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a> 
+                            </div>
+                        </div>
+
+                        <div class="post-container">
+                            <p>{{post.post}}</p>
+                        </div>
+
+                        <div class="post-action-container">
+                            <div class="pull-left">
+                                <a href="#" ng-click=""><i class="fa fa-angle-up grey"></i></a> 
+                                <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a> 
+                                <a href="#">reply</a>
+                            </div>
+                            <div class="pull-right">
+                                <a href="post/{{post.id}}"><i class="fa fa-link grey"></i></a>
+                            </div>
+                        </div>
+
+                         <!--
                         <div class="profilePost">
                             <form role="form">
                                 <md-input-container class="md-block">
@@ -58,7 +72,8 @@
                                 </md-input-container>
                             </form>
                         </div>
-                    </div>
+                        -->
+
                 </div>
             </md-card>
 
@@ -93,7 +108,7 @@
             </md-card>
             <br><br>
             <div ng-click="loadMoreVotes()" style="text-align:center">
-                <button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-caret-down"></i></button>
+                <button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-angle-down"></i></button>
             </div>
             <div class="spacing-50"></div>
         </div>
