--- a/assets/src/app/home/templates/intro.tpl.html
+++ b/assets/src/app/home/templates/intro.tpl.html
@@ -50,7 +50,7 @@
                 </md-card-title>
             </md-card> 
             <div ng-click="loadMoreBills()" style="text-align:center">
-                <button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-caret-down"></i></button>
+                <button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-angle-down"></i></button>
             </div>
         </div>
     </div>
@@ -67,7 +67,7 @@
                 </md-card-title>
             </md-card>
             <div ng-click="loadMoreCommittees()" style="text-align:center">
-                <button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-caret-down"></i></button>
+                <button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-angle-down"></i></button>
             </div>
         </div>
     </div>
@@ -115,7 +115,7 @@
                 </div>
             </div>
             <div ng-click="loadMoreMembers()" style="text-align:center">
-                <button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-caret-down"></i></button>
+                <button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-angle-down"></i></button>
             </div>
         </div>
     </div>
