--- a/assets/src/app/member/templates/bills.tpl.html
+++ b/assets/src/app/member/templates/bills.tpl.html
@@ -3,5 +3,5 @@
     	{{bill.title}}
     </md-card>
     <div class="spacing-10"></div>
-	<button ng-show="bills.length != billCount" ng-click="loadMore()" class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-caret-down"></i></button>
+	<button ng-show="bills.length != billCount" ng-click="loadMore()" class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-angle-down"></i></button>
 </div>
