--- a/assets/src/app/member/templates/committees.tpl.html
+++ b/assets/src/app/member/templates/committees.tpl.html
@@ -8,5 +8,5 @@
         <md-card-title>
     </md-card>
     <div class="spacing-10"></div>
-	<button ng-show="committees.length != committeeCount" ng-click="loadMore()" class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-caret-down"></i></button>
+	<button ng-show="committees.length != committeeCount" ng-click="loadMore()" class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-angle-down"></i></button>
 </div>
