--- a/assets/src/app/member/templates/votes.tpl.html
+++ b/assets/src/app/member/templates/votes.tpl.html
@@ -9,6 +9,6 @@
 		</md-card-title>
 	</md-card>
 	<div class="spacing-10"></div>
-	<button ng-show="votes.length != voteCount" ng-click="loadMore()" class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-caret-down"></i></button>
+	<button ng-show="votes.length != voteCount" ng-click="loadMore()" class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-angle-down"></i></button>
 
 </div>
