--- a/assets/src/app/committee/templates/activity.tpl.html
+++ b/assets/src/app/committee/templates/activity.tpl.html
@@ -9,15 +9,45 @@
         </form>
     </div>
     <md-card ng-repeat="post in posts">
-        <md-card-title>
-            <md-card-title-text>
-                <a href="member/{{post.user.username}}">
-                    <img style="max-width:64px" ng-src="{{post.user.avatarUrl}}" class="md-card-image" alt="{{post.user.username}}">
-                    <p>{{post.user.username}}</p>
+        <div style="padding:16px 16px 16px">
+
+            <div>
+                <a href="/member/{{post.user.username}}">
+                    <img class="post-img" ng-src="{{post.user.avatarUrl}}" class="md-card-image" alt="{{post.user.username}}">
+                    <h4 class="post-name">{{post.user.username}}</h4>
                 </a>
+                <div class="pull-right">
+                    <span class="grey" am-time-ago="post.updatedAt"></span>
+                    <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a> 
+                </div>
+            </div>
+
+            <div class="post-container">
                 <p>{{post.post}}</p>
-            </md-card-title-text>
-        </md-card-title>
+            </div>
+
+            <div class="post-action-container">
+                <div class="pull-left">
+                    <a href="#" ng-click=""><i class="fa fa-angle-up grey"></i></a> 
+                    <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a> 
+                    <a href="#">reply</a>
+                </div>
+                <div class="pull-right">
+                    <a href="post/{{post.id}}"><i class="fa fa-link grey"></i></a>
+                </div>
+            </div>
+
+             <!--
+            <div class="profilePost">
+                <form role="form">
+                    <md-input-container class="md-block">
+                        <textarea ng-model="newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder=""></textarea>
+                    </md-input-container>
+                </form>
+            </div>
+            -->
+
+        </div>
     </md-card>
     <div class="billContainer" ng-repeat="bill in bills | orderBy:'-voteCount'">
         <div class="bill-item">
