--- a/.tmp/public/src/app/committee/index.tpl.html
+++ b/.tmp/public/src/app/committee/index.tpl.html
@@ -1,5 +1,5 @@
 <div class="imageContainerSmall">
-    <video class='flexible' autoplay="autoplay" muted="muted" preload="auto" loop="loop"><source src="https://s3-us-west-2.amazonaws.com/voetr/washington.mp4" type="video/mp4"></video>
+    <video class='flexible' autoplay="autoplay" muted="muted" preload="auto" loop="loop"><source src="https://s3-us-west-2.amazonaws.com/voetr/washington.mp4" type="video/mp4" playsinline></video>
     <div class="imageContainerSmallDiv container">  
         <h1 style="text-align:left">{{committee.title}}</h1>
     </div>
