--- a/.tmp/public/src/app/account/index.tpl.html
+++ b/.tmp/public/src/app/account/index.tpl.html
@@ -119,9 +119,7 @@
 	<p>send letter</p>
 	<!--<p>all activity, per vote.. on creation of bill, on profile comment</p>-->
 
-	<div style="height:100px;"></div>
+	<div class="spacing-50"></div>
 
 </div>
-
 <div ng-include="'footer/index.tpl.html'"></div>
-
