--- a/assets/src/app/committee/templates/bills.tpl.html
+++ b/assets/src/app/committee/templates/bills.tpl.html
@@ -10,7 +10,7 @@
         </form>
     </div>
 </div>
-<div class="container bill-list-container" style="min-height:100vh">
+<div class="container bill-list-container">
     <div class="bill-container" ng-repeat="bill in bills | orderBy:'-voteCount'">
         <div class="bill-item">
             <div>
