--- a/assets/src/app/committee/templates/committees.tpl.html
+++ b/assets/src/app/committee/templates/committees.tpl.html
@@ -1,4 +1,4 @@
-<div class="container" style="min-height:100vh">
+<div class="container">
     <div class="committee-title">
         <h2><a href="committee/{{committee.parent.urlTitle}}">{{committee.parent.title}}</a></h2>
     </div>
