--- a/.tmp/public/src/app/register/index.tpl.html
+++ b/.tmp/public/src/app/register/index.tpl.html
@@ -1,52 +1,3 @@
-<!--register-->
-<!--<div class="register-form container">
-    <div class="row">
-        <div class="col-md-12">
-            <h3>Create an Account</h3>
-            <md-divider></md-divider><br>
-
-            <form class="form-horizontal" role="form" action="/auth/local/register" method="post">
-                <div class="form-group">
-                    <label for="inputUsername3" class="col-sm-2 control-label">Username</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="inputUsername3" name="username" placeholder="Username" value="">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-                    <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail3" name="email" placeholder="Email" value="">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-                    <div class="col-sm-10">
-                        <input type="password" class="form-control" id="inputPassword3" name="password" placeholder="Password" value="">
-                    </div>
-                </div>
-                <div class="form-group" style="">
-                    <div class="col-sm-offset-1 col-sm-10">
-                        <button type="submit" class="btn btn-default">Sign in</button>
-                    </div>
-                </div>
-            </form>
-        </div>
-    </div>
-    <md-divider></md-divider><br>
-    <div class="row">
-        <div style="text-align:center">
-            <a href="/auth/facebook">facebook</a>
-            <a href="/auth/twitter">twitter</a>
-            <a href="/auth/google">google</a>
-        </div>
-    </div>
-    <div class="row">
-        <div style="text-align:center">
-            <a href="/login">already have an account?</a>
-        </div>
-    </div>
-</div>-->
-
 <div class="log-background">
     <div class="blkoverlay"></div>
     <div class="log-form">
@@ -68,5 +19,4 @@
         </div> 
     </div>
 </div>
-
-
+<div ng-include="'footer/index.tpl.html'"></div>
