--- a/assets/src/app/committee/templates/discussion.tpl.html
+++ b/assets/src/app/committee/templates/discussion.tpl.html
@@ -1,4 +1,4 @@
-<div class="container" style="min-height:100vh">
+<div class="container">
     <div class="profilePost">
         <form role="form">
             <md-input-container class="md-block">
