--- a/assets/src/app/committee/templates/members.tpl.html
+++ b/assets/src/app/committee/templates/members.tpl.html
@@ -1,4 +1,4 @@
-<div class="container" style="min-height:100vh">
+<div class="container">
     <div class="col-lg-4 col-sm-6" ng-repeat="member in members">
         <div class="member-card">
             <div class="image" style="background-image: url('{{member.user.coverUrl}}')">
