--- a/assets/styles/css/theme.css
+++ b/assets/styles/css/theme.css
@@ -1,13 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Jura:300,400,600');
 @import "https://fonts.googleapis.com/css?family=Cantarell";
 
-html, body {
-  height:100%;
-  font-family: verdana,arial,sans-serif;
-  font-weight:100;
-  color:#000;
-}
-
 html {
     height:100%;
     box-sizing: border-box;
@@ -20,8 +13,11 @@ html {
 body {
     position: relative;
     margin:0;
-    padding-bottom:200px;
-    min-height: 100%
+    padding-bottom:120px!important;
+    min-height: 100%;
+    font-family: verdana,arial,sans-serif;
+    font-weight:100;
+    color:#000;
 }
 
 *::-webkit-media-controls-panel {
@@ -49,10 +45,6 @@ a:hover {
   text-decoration:none;
 }
 
-h1,h2,h3 {
-  //font-weight:800;
-}
-
 hr {
   margin-top: 20px;
   margin-bottom: 20px;
@@ -73,6 +65,14 @@ video {
 
 md-card{
   overflow:hidden;
+}
+
+.main-container{
+  width:100%;
+  height:100%;
+  margin:0px;
+  padding-top:50px;
+  overflow-x:hidden;
 }
 
 .spacing-5 {
@@ -249,7 +249,15 @@ md-input-container.md-default-theme .md-input, md-input-container .md-input {
     background-color:#24242e;
     color: white;
     font-family: 'Jura', sans-serif;
+
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+
 }
+
+
 
 .footer a{
   color:white;
@@ -512,7 +520,7 @@ md-input-container.md-default-theme .md-input, md-input-container .md-input {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  //height: 100vh;
+  height: 100vh;
   padding-top:5%;
   padding-bottom:5%;
   width: 100%;
