--- a/.tmp/public/src/app/committee/index.tpl.html
+++ b/.tmp/public/src/app/committee/index.tpl.html
@@ -22,7 +22,7 @@
 </div>
 <md-divider></md-divider>
 <div class="container" ng-show="editCommitteeToggle"><p>edit committee form</p></div>
-<div class="committee-container">
+<div class="committee-container container">
 	<div ui-view="committeeActivity"></div>
 	<div ui-view="committeeBills"></div>
 	<div ui-view="committeeCommittees"></div>
