--- a/assets/src/app/committee/templates/members.tpl.html
+++ b/assets/src/app/committee/templates/members.tpl.html
@@ -6,7 +6,7 @@
             </div>
             <div class="info">
                 <h2 class="name"><a href="member/{{member.user.username}}">{{member.user.username}}</a></h2>
-                <p>{{member.user.title}}</p>
+                <p>{{member.title}}</p>
                 <p>{{member.user.state}}</p>
             </div>
             <div class="social">
