--- a/assets/src/app/committees/index.tpl.html
+++ b/assets/src/app/committees/index.tpl.html
@@ -5,6 +5,7 @@
     </div>
 </div>
 <div class="container">
+    <div class="spacing-15"></div>
     <div class="dropdown sort-dropdown noselect">
         <a class="dropdown-toggle noselect" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <h4 class="noselect">Sort by {{sort}}<span class="caret"></span></h4>
@@ -15,6 +16,7 @@
             <li><a class="sort-a" ng-click="selectSort('memberCount DESC')"><h5>Most Popular</h5></a></li>
         </ul>
     </div>
+    <div class="spacing-15"></div>
     <div ng-show="currentUser">
         <form role="form">
             <md-input-container class="md-block">
