--- a/assets/src/app/home/templates/feed.tpl.html
+++ b/assets/src/app/home/templates/feed.tpl.html
@@ -47,8 +47,22 @@
                             <h4 class="post-name">{{post.user.username}}</h4>
                         </a>
                         <div class="pull-right">
+
+
                             <span class="grey" am-time-ago="post.updatedAt"></span>
-                            <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a> 
+
+                            <div class="dropdown sort-dropdown noselect">
+                                <a class="dropdown-toggle noselect" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                    <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a> 
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="sort-a" ng-click="selectSort('voteCount DESC')"><h5>Delete</h5></a></li>
+                                    <hr class="sort-hr">
+                                    <li><a class="sort-a" ng-click="selectSort('voteCount ASC')"><h5>Share</h5></a></li>
+                                </ul>
+                            </div>
+
+
                         </div>
                     </div>
 
