--- a/.tmp/public/src/app/nav/index.tpl.html
+++ b/.tmp/public/src/app/nav/index.tpl.html
@@ -43,6 +43,7 @@
                                 {{currentUser.username}}
                             </a>
                         </li>
+                        <!--<li><a href="/notifications">notifications</a></li>-->
                         <li><a href="/account">account</a></li>
                         <li role="separator" class="divider"></li>
                         <li><a href="/logout">log out</a></li>
