--- a/.tmp/public/src/app/register/index.tpl.html
+++ b/.tmp/public/src/app/register/index.tpl.html
@@ -1,5 +1,5 @@
 <div class="log-background">
-    <div class="blkoverlay"></div>
+    <!--<div class="blkoverlay"></div>-->
     <div class="log-form">
         <h2><span class="inline-logo"><i style="color:#2ab996" class="fa fa-check"></i>oetr</span> - register</h2>
         <form role="form" action="/auth/local/register" method="post">
@@ -20,3 +20,12 @@
     </div>
 </div>
 <div ng-include="'footer/index.tpl.html'"></div>
+
+
+<!--
+<div class="row" style="text-align:center;margin-top:20px">
+    <div class="col-xs-4"><a style="width:100%;" class="btn btn-block btn-social btn-facebook" href="/auth/facebook"><span class="fa fa-facebook"></span> Facebook</a></div>
+    <div class="col-xs-4"><a style="width:100%;" class="btn btn-block btn-social btn-twitter" href="/auth/twitter"><span class="fa fa-twitter"></span> Twitter</a></div>
+    <div class="col-xs-4"><a style="width:100%" class="btn btn-block btn-social btn-google" href="/auth/google"><span class="fa fa-google"></span> Google</a></div>
+</div>
+-->
