--- a/.tmp/public/src/app/about/index.tpl.html
+++ b/.tmp/public/src/app/about/index.tpl.html
@@ -7,19 +7,22 @@
 <div class="about-container">
 	<div id="section1">
 		<div class="container">
-			<h2>the voice of the internet</h2>
-			<p>directly impact the political landscape</p>
-			<img style="height:64px" src="http://www.freeiconspng.com/uploads/vote-icon-19.png"/>
+			<!--<h2>the voice of the internet</h2>-->
+			<h2>directly impact the political landscape</h2>
+			<br>
+			<h4>build empowerment though the creation of constituent coalitions.</h4>
+			<h4>change consensus though direct input on policy decisions.</h4>
 		</div>
 	</div>
 	<div id="section2">
 		<div class="container">
 			<h4>direct your impact though input on policy</h4>
-			<p>decision making influence in the power of your hands</p>
+			<h5>decision making influence in the power of your hands</h5>
 		</div>
 	</div>
 	<div id="section3">
 		<div class="container">
+			<h3>create of constituent coalitions</h3>
 			<h4>elect representatives and serve your constituents</h4>
 	    	<p>with continual elections, select others to represent you at any time</p>
 	    </div>
