--- a/assets/src/app/login/index.tpl.html
+++ b/assets/src/app/login/index.tpl.html
@@ -1,5 +1,5 @@
 <div class="log-background">
-    <div class="blkoverlay"></div>
+    <!--<div class="blkoverlay"></div>-->
     <div class="log-form">
         <h2><span class="inline-logo"><i style="color:#2ab996" class="fa fa-check"></i>oetr</span> - login</h2>
         <form role="form" action="/auth/local" method="post">
