--- a/.tmp/public/src/app/about/index.tpl.html
+++ b/.tmp/public/src/app/about/index.tpl.html
@@ -22,7 +22,7 @@
 	</div>
 	<div id="section3">
 		<div class="container">
-			<h3>create of constituent coalitions</h3>
+			<h3>create constituent coalitions</h3>
 			<h4>elect representatives and serve your constituents</h4>
 	    	<p>with continual elections, select others to represent you at any time</p>
 	    </div>
