--- a/.tmp/public/src/app/bill/index.tpl.html
+++ b/.tmp/public/src/app/bill/index.tpl.html
@@ -19,9 +19,9 @@
 							<img ng-src="{{bill.user.avatarUrl}}" err-src="/images/avatar.png">
 						</div>
 						<div class="info">
-						    <h2 class="name"><a href="member/{{bill.user.username}}">{{bill.user.username}}</a></h2>
-						    <p>{{bill.user.title}}</p>
-							<p>{{bill.user.state}}</p>
+                        	<h4 class="name"><a href="member/{{bill.user.username}}">{{bill.user.username}}</a></h4>
+						    <h5>{{bill.user.title}}</h5>
+							<h5>{{bill.user.state}}</h5>
 						</div>
 						<div class="social">
 							<a ng-show="bill.user.socialAccounts.facebook.profileUrl" href="{{bill.user.socialAccounts.facebook.profileUrl}}"  target="_blank"><i class="fa fa-facebook"></i></a>
