--- a/assets/src/app/home/templates/feed.tpl.html
+++ b/assets/src/app/home/templates/feed.tpl.html
@@ -4,25 +4,40 @@
         <div class="col-md-4">
 
 
-            <img style="position:relative;top:0em" class="avatar" ng-src="{{currentUser.avatarUrl}}"/>
-            <h2><a href="/member/{{currentUser.username}}"><b>{{currentUser.username}}</a></b></h2>
-            <div class="spacing-5"></div>
-            <h5>Bills - {{committees.length}}</h5>
-            <h5>Committees - {{committees.length}}</h5>
-            <h5>Constituents - {{constituents.length}}</h5>
-            <h5>Representatives - {{representatives.length}}</h5>
-            <h5>Votes - {{votes.length}}</h5>
-            <div class="spacing-25"></div>
-            <uib-tabset active="0" vertical="true">
-                <uib-tab index="0" heading="Activity">
-                </uib-tab>
-                <uib-tab heading="Bills">
-                </uib-tab>
-                <uib-tab heading="Posts">
-                </uib-tab>
-                <uib-tab heading="Votes">
-                </uib-tab>
-            </uib-tabset>
+            <div class="member-card">
+                <div class="image" style="background-image: url('{{user.coverUrl}}')">
+                    <a href="member/{{user.username}}"><img style="top:5%" ng-src="{{user.avatarUrl}}" err-src="/images/avatar.png"></a>
+                </div>
+                <div class="info" style="height:200px">
+                    <h4 class="name"><a href="member/{{user.username}}">{{user.username}}</a></h2>
+
+                    <div class="spacing-10"></div>
+                    <h5>Bills - {{committees.length}}</h5>
+                    <h5>Committees - {{committees.length}}</h5>
+                    <h5>Constituents - {{constituents.length}}</h5>
+                    <h5>Representatives - {{representatives.length}}</h5>
+                    <h5>Votes - {{votes.length}}</h5>
+                    <div class="spacing-25"></div>
+
+                </div>
+                <div class="social">
+                    <a ng-show="user.socialAccounts.facebook.profileUrl" href="{{user.socialAccounts.facebook.profileUrl}}"  target="_blank"><i class="fa fa-facebook facebook-icon"></i></a>
+                    <a ng-show="user.socialAccounts.twitter.profileUrl" href="{{user.socialAccounts.twitter.profileUrl}}"  target="_blank"><i class="fa fa-twitter twitter-icon"></i></a>
+                    <a ng-show="user.socialAccounts.google.profileUrl" href="{{user.socialAccounts.google.profileUrl}}"  target="_blank"><i class="fa fa-google google-icon"></i></a>
+                </div>
+            </div>
+
+            <div class="spacing-15"></div>
+
+
+            <!--
+            <img style="position:relative;top:0em" class="avatar" ng-src="{{user.avatarUrl}}"/>
+            <h2><a href="/member/{{user.username}}"><b>{{user.username}}</a></b></h2>
+            -->
+
+            <h4>activity</h4>
+            <h4>trending</h4>
+            <h4>votes</h4>
 
             
         </div>
@@ -36,35 +51,58 @@
                 </form>
                 <button ng-click="createPost()" type="submit" class="btn btn-default"><i class="fa fa-paper-plane"></i> Submit</button>
             </div>
-            <div class="spacing-5"></div>
+            <div class="spacing-10"></div>
 
             <md-card ng-repeat="post in posts">
                 <div style="padding:16px 16px 16px">
 
                     <div>
+            
                         <a href="/member/{{post.user.username}}">
                             <img class="post-img" ng-src="{{post.user.avatarUrl}}" class="md-card-image" alt="{{post.user.username}}">
                             <h4 class="post-name">{{post.user.username}}</h4>
                         </a>
+
                         <div class="pull-right">
 
 
                             <span class="grey" am-time-ago="post.updatedAt"></span>
-                            <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a> 
+                            <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a>
+
+                            <!--<div class="btn-group" uib-dropdown is-open="status.isopen">
+                              <button uib-dropdown-toggle ng-disabled="disabled">
+                                <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a> 
+                              </button>
+                              <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+                                <li role="menuitem"><a href="#">Share</a></li>
+                                <li role="menuitem"><a href="#">Delete</a></li>
+                              </ul>
+                            </div>-->
                             
 
                         </div>
                     </div>
 
                     <div class="post-container">
+
+                        <div ng-show="post.profile.id != post.user.id">
+                            <div class="spacing-5"></div>
+                            <a ng-show="post.bill" href="bill/{{post.bill.id}}/1"><h4>{{post.bill.title}}</h4></a>
+                            <a ng-show="post.committee" href="committee/{{post.committee.urlTitle}}"><h4>{{post.committee.title}}</h4></a>
+                            <a ng-show="post.profile" href="member/{{post.profile.username}}"><h4>{{post.profile.username}}</h4></a>
+                            <a ng-show="post.vote" href="vote/{{post.vote.id}}"><h4>{{post.vote.title}}</h4></a>
+                            <div class="spacing-5"></div>
+                        </div>
+
                         <p>{{post.post}}</p>
+
                     </div>
 
                     <div class="post-action-container">
                         <div class="pull-left">
-                            <a href="#" ng-click=""><i class="fa fa-angle-up grey"></i></a> 
-                            <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a> 
-                            <a href="#">reply</a>
+                            <a href="#" ng-click="" class="grey"><i class="fa fa-angle-up"></i> like </a> 
+                            <a href="#" ng-click="" class="grey"><i class="fa fa-angle-down"></i> dislike </a> 
+                            <a href="#" class="grey"><i class="fa fa-reply"></i> reply </a>
                         </div>
                         <div class="pull-right">
                             <a href="post/{{post.id}}"><i class="fa fa-link grey"></i></a>
