--- a/assets/src/app/votes/index.tpl.html
+++ b/assets/src/app/votes/index.tpl.html
@@ -8,14 +8,14 @@
     <div class="spacing-10"></div>
 	<div class="dropdown sort-dropdown noselect">
 		<a class="dropdown-toggle noselect" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-			<h4 class="noselect">Sort by {{sort}}<span class="caret"></span></h4>
+            <h4 class="noselect">{{sortText[sort]}}<span class="caret"></span></h4>
 		</a>
 		<ul class="dropdown-menu">
+			<li><a class="sort-a" ng-click="selectSort('trendingScore DESC')"><h5>Trending</h5></a></li>
+			<hr class="sort-hr">
 			<li><a class="sort-a" ng-click="selectSort('createdAt DESC')"><h5>Most Recent</h5></a></li>
 			<hr class="sort-hr">
 			<li><a class="sort-a" ng-click="selectSort('voteCount DESC')"><h5>Most Votes</h5></a></li>
-			<hr class="sort-hr">
-			<li><a class="sort-a" ng-click="selectSort('voteCount ASC')"><h5>Lowest Votes</h5></a></li>
 		</ul>
 	</div>
 	<div class="spacing-10"></div>
