--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -90,11 +90,13 @@
         <script src="/src/app/home/index.js"></script>
         <script src="/src/app/login/index.js"></script>
         <script src="/src/app/member/index.js"></script>
+        <script src="/src/app/members/index.js"></script>
         <script src="/src/app/nav/index.js"></script>
         <script src="/src/app/post/index.js"></script>
         <script src="/src/app/register/index.js"></script>
         <script src="/src/app/search/index.js"></script>
         <script src="/src/app/vote/index.js"></script>
+        <script src="/src/app/votes copy/index.js"></script>
         <script src="/src/app/votes/index.js"></script>
         <script src="/src/common/models/bill.js"></script>
         <script src="/src/common/models/billVote.js"></script>
