--- a/assets/src/app/home/templates/feed.tpl.html
+++ b/assets/src/app/home/templates/feed.tpl.html
@@ -29,47 +29,58 @@
 
             <div class="spacing-15"></div>
 
-
-            <!--
-            <img style="position:relative;top:0em" class="avatar" ng-src="{{user.avatarUrl}}"/>
-            <h2><a href="/member/{{user.username}}"><b>{{user.username}}</a></b></h2>
-            -->
-
-            <h4>activity</h4>
-            <h4>trending</h4>
-            <h4>votes</h4>
-
             
         </div>
         <div class="col-md-8">      
+            <!--
             <div class="spacing-5"></div>
             <div class="profilePost">
                 <form role="form">
                     <md-input-container class="md-block">
-                        <textarea ng-model="newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder=""></textarea>
+                        <textarea ng-model="newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder="what's happening? engage!"></textarea>
                     </md-input-container>
                 </form>
                 <button ng-click="createPost()" type="submit" class="btn btn-default"><i class="fa fa-paper-plane"></i> Submit</button>
             </div>
+            -->
+
+            <div class="spacing-10"></div>
+
+            <md-card>
+                <div style="padding:16px 16px 16px">
+                    <div class="post-controller-container">
+                        <a href="/member/{{user.username}}">
+                            <img class="post-img" ng-src="{{user.avatarUrl}}" class="md-card-image" alt="{{user.username}}">
+                            <h4 class="post-name">{{user.username}}</h4>
+                        </a>
+                    </div>
+                    <div style="margin-left:61px;">
+                        <form role="form">
+                            <md-input-container class="md-block">
+                                <textarea ng-model="newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder=""></textarea>
+                            </md-input-container>
+                            <button ng-click="createPost()" type="submit" class="btn btn-default"><i class="fa fa-paper-plane"></i> Submit</button>
+                        </form>
+                    </div>
+
+                </div>
+            </md-card>
+
             <div class="spacing-10"></div>
 
             <md-card ng-repeat="post in posts">
                 <div style="padding:16px 16px 16px">
 
-                    <div>
-            
+                    <div class="post-controller-container">
                         <a href="/member/{{post.user.username}}">
                             <img class="post-img" ng-src="{{post.user.avatarUrl}}" class="md-card-image" alt="{{post.user.username}}">
                             <h4 class="post-name">{{post.user.username}}</h4>
                         </a>
-
                         <div class="pull-right">
-
-
                             <span class="grey" am-time-ago="post.updatedAt"></span>
                             <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a>
-
-                            <!--<div class="btn-group" uib-dropdown is-open="status.isopen">
+                            <!--
+                            <div class="btn-group" uib-dropdown is-open="status.isopen">
                               <button uib-dropdown-toggle ng-disabled="disabled">
                                 <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a> 
                               </button>
@@ -77,14 +88,12 @@
                                 <li role="menuitem"><a href="#">Share</a></li>
                                 <li role="menuitem"><a href="#">Delete</a></li>
                               </ul>
-                            </div>-->
-                            
-
+                            </div>
+                            -->
                         </div>
                     </div>
 
                     <div class="post-container">
-
                         <div ng-show="post.profile.id != post.user.id">
                             <div class="spacing-5"></div>
                             <a ng-show="post.bill" href="bill/{{post.bill.id}}/1"><h4>{{post.bill.title}}</h4></a>
@@ -93,31 +102,28 @@
                             <a ng-show="post.vote" href="vote/{{post.vote.id}}"><h4>{{post.vote.title}}</h4></a>
                             <div class="spacing-5"></div>
                         </div>
-
                         <p>{{post.post}}</p>
-
                     </div>
 
                     <div class="post-action-container">
                         <div class="pull-left">
-                            <a href="#" ng-click="" class="grey"><i class="fa fa-angle-up"></i> like </a> 
-                            <a href="#" ng-click="" class="grey"><i class="fa fa-angle-down"></i> dislike </a> 
-                            <a href="#" class="grey"><i class="fa fa-reply"></i> reply </a>
+                            <a href="#" ng-click="" class="grey"><i class="fa fa-angle-up"></i> 0 like </a> 
+                            <a href="#" ng-click="" class="grey"><i class="fa fa-angle-down"></i> 0 dislike </a> 
+                            <a href="#" class="grey" ng-click="reply(post)"><i class="fa fa-reply"></i> reply </a>
                         </div>
                         <div class="pull-right">
                             <a href="post/{{post.id}}"><i class="fa fa-link grey"></i></a>
                         </div>
                     </div>
 
-                     <!--
-                    <div class="profilePost">
+                    <div style="margin-left:61px;" ng-show="post.showReply">
                         <form role="form">
                             <md-input-container class="md-block">
-                                <textarea ng-model="newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder=""></textarea>
+                                <textarea ng-model="post.newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder=""></textarea>
                             </md-input-container>
+                            <button ng-click="createPost(post)" type="submit" class="btn btn-default"><i class="fa fa-paper-plane"></i> Submit</button>
                         </form>
                     </div>
-                    -->
 
                 </div>
             </md-card>
@@ -144,7 +150,7 @@
                             <span class="subtitle">({{vote.voteCount}} total votes)</span>
                         </h4>
                         <div class="margin-10"></div>
-                        <a href="/bill/{{bill._id}}/{{bill.title}}">{{vote.bill.title}}</a>
+                        <a href="/bill/{{vote.bill.id}}/{{vote.bill.title}}">{{vote.bill.title}}</a>
                         <br><br>
                     </md-card-title-text>
                 </md-card-title>
